# often-hotels

./: .env.example  .gitignore  2025-09-28-this-session-is-being-continued-from-a-previous-co.txt  2025-10-01-prevneedtxt-this-is-our-old-chat-the-60-days-we.txt  ADMIN_CREDENTIALS.md  API_GUIDE.md  Dockerfile  ENHANCED_HOTEL_RESPONSE_GUIDE.md  ENHANCED_HOTEL_SEARCH_API_GUIDE.md  ITINERARY_OPTIMIZATION_API_TESTING.md  ITINERARY_OPTIMIZATION_TEST_REPORT.md  Makefile  PRISMA_STUDIO_SETUP.md  PRODUCTION_API_TESTING_REPORT.md  README.md  TRAVCLAN_API_INTEGRATION.md  add_hotel_search_indexes.py  admin_6month_token.json  alembic.ini  create_default_user.py  create_tables.py  debug_auth.py  debug_date_windows.py  debug_hotel_pricing.py  debug_location_api.py  docker-compose.prod.yml  docker-compose.yml  docker-compose.yml.backup  generate_long_token.py  init_prod_db.py  itinerary-api-complete-guide.md  often_hotels.db-shm  often_hotels.db-wal  package.json  prev_need.txt  pyproject.toml  requirements-locked.txt  requirements.txt  seed_admin_user.py  seed_prod_destinations.py  (+9 more)
alembic/: env.py
app/: main.py
app/api/: deps.py  (+1 more)
markdown_guide/: CELERY_DEEP_DIVE.md  explanation.md  itinerary-api-testing-guide.md  itinerary-optimization-api.md  location-search-api.md
migrations/: 0cebe4730269_add_trace_id_to_price_history_table.py  ba9b9c008ca2_add_dropcase_models_for_hotel_price_.py  e0ca0eceb449_add_hotel_booking_and_price_tracking_.py
monitoring/: prometheus.yml
nginx/: nginx.conf
prisma/: schema.prisma
scripts/: README.md  start_celery.sh  sync_prisma.sh
(+75 files in other folders)
